--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -204,7 +204,7 @@ table {
   width: 100%;
   top: 100%;
 }
-#sprite-music-content #music-album-full {
+#music-album-full {
   position: absolute;
   top: 0;
   left: 0;
